# CoLeaf-CNN

./: .gitignore  README.md  data.ipynb  dataset.py  main.ipynb  network.py  pyproject.toml  trainer.py
output/: train_losses.pkl  val_losses.pkl
output/metrics/: all_labels_v1.npy  all_probs_v1.npy  classification_report_v1.csv  confusion_matrix_v1.npy  epoch_metrics_v1.csv  fold_metrics_v1.csv  roc_data_v1.csv  splits_data_v1.csv  train_metrics_v1.csv  y_truev1.npy
